k8s/scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
  template:
    metadata:
      labels:
        app: scheduler
    spec:
      containers:
        - name: scheduler
          image: public.ecr.aws/g7j1x0t3/laravel-app:latest
          args: ["php-fpm"]
          command: ["sh", "-c", "while true; do php artisan schedule:run; sleep 60; done"]
