k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workers
  template:
    metadata:
      labels:
        app: workers
    spec:
      containers:
        - name: workers
          image: public.ecr.aws/g7j1x0t3/laravel-app:latest
          args: ["php", "artisan", "queue:work"]
