k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: public.ecr.aws/g7j1x0t3/laravel-app:latest
          ports:
            - containerPort: 9000
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "cp -r /app/. /var/www/html"]
          volumeMounts:
            - name: shared-storage
              mountPath: /var/www/html
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
