k8s/reverb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reverb
  template:
    metadata:
      labels:
        app: reverb
    spec:
      containers:
        - name: reverb
          image: public.ecr.aws/g7j1x0t3/laravel-app:latest
          args: ["php", "artisan", "reverb:start"]
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: reverb
spec:
  selector:
    app: reverb
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
