k8s/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
        - name: nginx
          image: nginx:1.27.3-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: shared-storage
              mountPath: /var/www/html
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "chmod -R guo+w /var/www/html/storage"]
      volumes:
        - name: shared-storage
          persistentVolumeClaim:
            claimName: shared-pvc
        - name: nginx-config
          configMap:
            name: nginx-config

---
apiVersion: v1
kind: Service
metadata:
  name: webserver
spec:
  type: ClusterIP 
  selector:
    app: webserver
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: realtime-chatapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webserver
                port:
                  number: 80
